WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59945
Chromium windows build is broken due to
r85395
https://bugs.webkit.org/show_bug.cgi?id=59945
Summary
Chromium windows build is broken due to r85395
Alok Priyadarshi
Reported
2011-05-02 10:20:07 PDT
IDBFactoryBackendProxy.cpp is missing an include file.
Attachments
proposed patch
(1.13 KB, patch)
2011-05-02 10:22 PDT
,
Alok Priyadarshi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihai Parparita
Comment 1
2011-05-02 10:22:20 PDT
I guess that file doesn't get built when building Chromium upstream? Will fix.
Alok Priyadarshi
Comment 2
2011-05-02 10:22:59 PDT
Created
attachment 91937
[details]
proposed patch
WebKit Commit Bot
Comment 3
2011-05-02 10:55:31 PDT
Comment on
attachment 91937
[details]
proposed patch Clearing flags on attachment: 91937 Committed
r85491
: <
http://trac.webkit.org/changeset/85491
>
WebKit Commit Bot
Comment 4
2011-05-02 10:55:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug