2011-05-02  Alok Priyadarshi  <alokp@chromium.org>

Reviewed by Dimitri Glazkov.

        Chromium windows build is broken due to r85395
        https://bugs.webkit.org/show_bug.cgi?id=59945

        Include SecurityOrigin.h in IDBFactoryBackendProxy.cpp

        * src/IDBFactoryBackendProxy.cpp:

Canonical link: https://commits.webkit.org/75195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85491 268f45cc-cd09-0410-ab3c-d52691b4dbfc